--- a/en/templates/system/css/system.css
+++ b/en/templates/system/css/system.css
@@ -4,7 +4,7 @@
  */
 
 /* Import project-level system CSS */
-@import url(/web/20220207010425cs_/http://imerexplazahotel.com/en/media/system/css/system.css);
+@import url(/en/media/system/css/system.css);
 
 /* Unpublished */
 .system-unpublished, tr.system-unpublished {
