--- a/en/templates/ja_sugite/css/bootstrap.css
+++ b/en/templates/ja_sugite/css/bootstrap.css
@@ -2703,8 +2703,8 @@ input[type="button"].btn-block {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('/web/20220207010426im_/http://imerexplazahotel.com/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.eot');
-  src: url('/web/20220207010426im_/http://imerexplazahotel.com/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.eot#iefix') format('embedded-opentype'), url('/web/20220207010426im_/http://imerexplazahotel.com/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/web/20220207010426im_/http://imerexplazahotel.com/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/web/20220207010426im_/http://imerexplazahotel.com/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: url('/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.eot#iefix') format('embedded-opentype'), url('/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/en/plugins/system/t3/base-bs3/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
