remote http to path

--- a/en/component/mailto/index.html
+++ b/en/component/mailto/index.html
@@ -20,13 +20,13 @@
   <link rel="stylesheet" href="/en/templates/ja_sugite/css/megamenu.css" type="text/css" />
   <link rel="stylesheet" href="/en/templates/ja_sugite/css/off-canvas.css" type="text/css" />
   <link rel="stylesheet" href="/en/templates/ja_sugite/fonts/font-awesome/css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700c" type="text/css" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700c" type="text/css" />
   <link rel="stylesheet" href="/en/templates/ja_sugite/css/windows.css" type="text/css" />
   <script src="/en/t3-assets/js/js-599ae.js?t=385" type="text/javascript"></script>
   <script type="text/javascript">
 
 		if(typeof(j2storeURL) == 'undefined') {
-		var j2storeURL = 'http://imerexplazahotel.com/en/';
+		var j2storeURL = '//imerexplazahotel.com/en/';
 		}
 
 window.setInterval(function(){var r;try{r=window.XMLHttpRequest?new XMLHttpRequest():new ActiveXObject("Microsoft.XMLHTTP")}catch(e){}if(r){r.open("GET","./",true);r.send(null)}},3540000);
@@ -111,7 +111,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 
 	<h2>Email this link to a friend. <a class="mailto-close close" href="javascript: void window.close()" title="Close Window">&times;</a></h2>
 
-	<form action="http://imerexplazahotel.com/en/index.php" id="mailtoForm" method="post" class="form-horizontal">
+	<form action="//imerexplazahotel.com/en/index.php" id="mailtoForm" method="post" class="form-horizontal">
 
 		<div class="form-group">
 			<label for="mailto_field" class="col-sm-2 control-label">Email to</label>
