--- a/en/templates/ja_sugite/css/template.css
+++ b/en/templates/ja_sugite/css/template.css
@@ -28,23 +28,23 @@
 }
 .t3-logo,
 .t3-logo-color {
-  background-image: url("https://web.archive.org/web/20220207010425im_/http://imerexplazahotel.com/en/images/imerex-web-logo-3.png");
+  background-image: url("https://web.archive.org/web/20220207010425im_///imerexplazahotel.com/en/images/imerex-web-logo-3.png");
 }
 .t3-logo-small,
 .t3-logo-small.t3-logo-color {
-  background-image: url("https://web.archive.org/web/20220207010425im_/http://imerexplazahotel.com/en/images/imerex-web-logo-3.png");
+  background-image: url("https://web.archive.org/web/20220207010425im_///imerexplazahotel.com/en/images/imerex-web-logo-3.png");
 }
 .t3-logo-dark {
-  background-image: url("https://web.archive.org/web/20220207010425im_/http://imerexplazahotel.com/en/images/imerex-web-logo-3.png");
+  background-image: url("https://web.archive.org/web/20220207010425im_///imerexplazahotel.com/en/images/imerex-web-logo-3.png");
 }
 .t3-logo-small.t3-logo-dark {
-  background-image: url("https://web.archive.org/web/20220207010425im_/http://imerexplazahotel.com/en/images/imerex-web-logo-3.png");
+  background-image: url("https://web.archive.org/web/20220207010425im_///imerexplazahotel.com/en/images/imerex-web-logo-3.png");
 }
 .t3-logo-light {
-  background-image: url("https://web.archive.org/web/20220207010425im_/http://imerexplazahotel.com/en/images/imerex-web-logo-3.png");
+  background-image: url("https://web.archive.org/web/20220207010425im_///imerexplazahotel.com/en/images/imerex-web-logo-3.png");
 }
 .t3-logo-small.t3-logo-light {
-  background-image: url("https://web.archive.org/web/20220207010425im_/http://imerexplazahotel.com/en/images/imerex-web-logo-3.png");
+  background-image: url("https://web.archive.org/web/20220207010425im_///imerexplazahotel.com/en/images/imerex-web-logo-3.png");
 }
 @media (max-width: 991px) {
   .logo-control .logo-img-sm {
@@ -2713,7 +2713,7 @@ ul.latestusers li {
   margin-left: 0;
 }
 .ja-twitter {
-  background: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/ico/twitter-big.png") no-repeat left top;
+  background: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/ico/twitter-big.png") no-repeat left top;
   padding-top: 120px;
   margin-top: 28px;
   color: #ffffff;
@@ -2804,7 +2804,7 @@ ul.latestusers li {
   left: 17px;
   width: 32px;
   height: 32px;
-  background-image: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/ico/icon-close.png");
+  background-image: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/ico/icon-close.png");
   text-indent: -23em;
   cursor: pointer;
   overflow: hidden;
@@ -5428,7 +5428,7 @@ div.calendar {
   }
 }
 .row-feature.row-feature-video .video-shuffle-wrap .content a {
-  background: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/play-icon.png") no-repeat left top;
+  background: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/play-icon.png") no-repeat left top;
   display: block;
   height: 74px;
   margin: 0 auto;
@@ -5471,7 +5471,7 @@ div.calendar {
   }
 }
 .row-feature.row-feature-bg {
-  background: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/custom-bg.png") no-repeat bottom right;
+  background: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/custom-bg.png") no-repeat bottom right;
 }
 @media screen and (max-width: 767px) {
   .row-feature.row-feature-bg .container .row {
@@ -6429,7 +6429,7 @@ body #ezblog-dashboard #blog-login form input.button:active {
 }*/
 .logo-text {
   padding: 14px 0 14px 74px;
-  background: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/logo.png") no-repeat left center;
+  background: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/logo.png") no-repeat left center;
   height: 78px;
 }
 @media (max-width: 767px) {
@@ -6678,7 +6678,7 @@ body #ezblog-dashboard #blog-login form input.button:active {
 }
 .footer-info .addthis_32x32_style .at15nc.at300bs,
 .footer-info .addthis_32x32_style .at15nc.at15t {
-  background-image: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/ico/social-small.png") !important;
+  background-image: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/ico/social-small.png") !important;
   clear: none;
   height: 60px !important;
   line-height: 60px !important;
@@ -6689,7 +6689,7 @@ body #ezblog-dashboard #blog-login form input.button:active {
 @media (min-with: 768px) {
   .footer-info .addthis_32x32_style .at15nc.at300bs,
   .footer-info .addthis_32x32_style .at15nc.at15t {
-    background-image: url("/web/20220207010425im_/http://imerexplazahotel.com/en/templates/ja_sugite/images/ico/social.png") !important;
+    background-image: url("/web/20220207010425im_///imerexplazahotel.com/en/templates/ja_sugite/images/ico/social.png") !important;
     height: 75px !important;
     line-height: 75px !important;
     width: 75px !important;
